--- a/src/app.css
+++ b/src/app.css
@@ -5,7 +5,7 @@
 @layer base {
 	html {
 		@apply text-white;
-		@apply bg-zinc-900;
+		@apply absolute inset-0 -z-10 h-full w-full bg-zinc-900 bg-[linear-gradient(to_right,#8080800a_1px,transparent_1px),linear-gradient(to_bottom,#8080800a_1px,transparent_1px)] bg-[size:14px_24px];
 		@apply scroll-smooth;
 	}
 
